# LinPlayer

./: .gitignore  API_REQUESTS.md  Cargo.toml  DESIGN.md  README.en.md  README.ja.md  README.md  index-tv.html  index.html  linplayer_log_2026-06-25T18-47-09-471617.txt  package-lock.json  package.json  pubspec.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-ffmpeg.yml  build-libass.yml  build-libmpv-pgs.yml  build.yml  extract-libmpv.yml  publish.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  linass_jni.cpp  mpv_render_jni.cpp
android/app/src/main/cpp/include/mpv/: client.h  render_gl.h
android/exoplayer-ffmpeg/: build.gradle.kts
android/exoplayer-ffmpeg/libs/: lib-decoder-ffmpeg-release.aar
apple_tv/: PLAYER_KERNELS.md  README.md
apple_tv/LinPlayerTV/: MainTabView.swift  RootView.swift
apple_tv/LinPlayerTV.xcodeproj/: project.pbxproj
apple_tv/LinPlayerTV/Models/: MediaModels.swift
apple_tv/LinPlayerTV/Theme/: AppTheme.swift
apps/: README.md
apps/android/: Cargo.toml  README.md  build.rs  package.json  tauri.conf.json  tv-commands.txt
apps/android/capabilities/: default.json
apps/android/src/: lib.rs
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/libmpv/: exports.txt  mpv.def
apps/desktop/src/: imgcache.rs  lib.rs  mpv.rs  pluginassets.rs  pluginmarket.rs  plugins_host.rs  shaders.rs  updater.rs
crates/core/: Cargo.toml
crates/core/src/: companion.html  companion.rs  config.rs  config_transfer.rs  emby.rs  http.rs  icon_cache.rs  icon_library.rs  image_cache.rs  lib.rs  media.rs  paths.rs  ranking.rs  secrets.rs  update.rs  watch_history.rs  watch_history_sync.rs
crates/core/src/danmaku/: local.rs  mod.rs
crates/core/src/net/: mod.rs  prefetch.rs
crates/core/src/net/cf/: mod.rs  proxy.rs  ranges.rs
crates/core/src/plugins/: assets.rs  contributions.rs  convert.rs  ctx.rs  engine.rs  extensions.rs  hello_it.rs  host.rs  installer.rs  manager.rs  manifest.rs  mod.rs  permission.rs  registry_index.rs  state.rs  storage.rs  worker.rs
crates/core/src/source/: aliyundrive.rs  anirss.rs  baidu.rs  dropbox.rs  feiniu.rs  googledrive.rs  mod.rs  onedrive.rs  openlist.rs  oplist.rs  pan115.rs  pan115_crypto.rs  pan139.rs  pan189.rs  plugin_source.rs  quark.rs  quark_tv.rs  stremio.rs
crates/core/src/sync/: bangumi.rs  bangumi_matcher.rs  calendar.rs  trakt.rs
crates/mpv/: Cargo.toml  build.rs
crates/mpv/libmpv/: mpv.exp  mpv.lib
crates/mpv/src/: lib.rs
docs/: BACKUP_FORMAT.md  DEVELOPMENT.md  NATIVE_RENDERING.md  NATIVE_UI_SPEC.md  PGS_SUBTITLE_SOLUTION.md  PLUGINS.md  PLUGINS_V2_PLAN.md  PORTABLE.md  README.en.md  README.ja.md  RUST_MIGRATION_PLAN.md
lib/: README.md  app.dart  main.dart
lib/core/: app_identity.dart
lib/core/api/: api_interfaces.dart  emby_api.dart
lib/core/network/: proxy_http_client.dart
lib/core/providers/: app_preferences.dart  app_providers.dart  appearance_providers.dart  episode_aggregation_provider.dart  intro_skip_providers.dart  media_providers.dart  playback_providers.dart  server_providers.dart  support_providers.dart  sync_providers.dart  translation_providers.dart  update_providers.dart  watch_history_providers.dart
lib/core/services/: anime4k_shaders.dart  app_logger.dart  cache_service.dart  cast_service.dart  danmaku_auto_loader.dart  deep_link_service.dart  exo_player_adapter.dart  ext_domain_service.dart  font_service.dart  (+15 more)
lib/desktop/: desktop_app.dart
lib/routes/: app_router.dart
lib/tv/: tv_app.dart
linux/: CMakeLists.txt
linux/libmpv/: README.md
linux/whisper/: README.md
macos/Runner.xcodeproj/: project.pbxproj
macos/libmpv/: README.md
macos/scripts/: upgrade_libmpv.sh
macos/whisper/: README.md
native-poc/: .gitignore  Cargo.toml  package-lock.json  package.json  vite.config.ts
native-poc/crates/core/: Cargo.toml  build.rs
native-poc/crates/core/src/: config.rs  config_transfer.rs  download.rs  emby.rs  http.rs  icon_cache.rs  icon_library.rs  image_cache.rs  lib.rs  ranking.rs  secrets.rs  server_batch.rs  translation.rs  update.rs  watch_history.rs  watch_history_sync.rs
native-poc/crates/core/src/danmaku/: mod.rs
native-poc/crates/core/src/net/: mod.rs  prefetch.rs
native-poc/crates/core/src/net/cf/: mod.rs  runtime.rs  speedtest.rs
native-poc/crates/core/src/source/: anirss.rs  mod.rs  quark.rs  quark_tv.rs
native-poc/crates/core/src/sync/: bangumi.rs  calendar.rs  mod.rs  trakt.rs
native-poc/docs/: desktop-drafts.html
native-poc/scripts/: build-android.sh  check-calendar-grouping.mjs  check-commands.sh  pack-portable.ps1
native-poc/src/: App.tsx  Danmaku.tsx  main.tsx  styles.css  telemetry.check.ts  telemetry.ts  vite-env.d.ts
native-poc/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
native-poc/src-tauri/capabilities/: default.json
native-poc/src-tauri/src/: imgcache.rs  lib.rs  mpv.rs  shaders.rs  telemetry.rs
oauth-proxy/: .dev.vars.example
oauth-proxy/public/: index.html  legal.css  legal.js
oauth-proxy/site/: _config.fluid.yml
scripts/: build-android-apk.sh  build-android.sh  check-calendar-grouping.mjs  check-commands.sh  check-workflows.sh  extract-mpv-libs.ps1  fetch_mihomo_tv.ps1  update_windows_icon.py
test/: anirss_match_test.dart  cf_reverse_proxy_test.dart  danmaku_match_dual_test.dart  library_filter_utils_test.dart  playback_error_text_test.dart  playback_url_resolver_test.dart  watch_history_service_test.dart  widget_test.dart
tools/sentry-users-badge/: worker.js  wrangler.toml
ui/: README.md
ui/desktop/: App.tsx  Danmaku.tsx  main.tsx  telemetry.ts
ui/mobile/: README.md
ui/shared/: api.ts  calendar-grouping.ts  plugin-ui.test.mjs  plugin-ui.ts  tokens.css  track-poll.ts
ui/tv/: App.tsx  README.md  main.tsx
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  native_mpv_render.cpp  native_mpv_render.h  win32_window.cpp
windows/scripts/: upgrade_libmpv_for_pgs.ps1
windows/whisper/: README.md
(+361 files in other folders)
