# Workspace 根:核心库(桌面/安卓复用) + 桌面 Tauri 壳。
[workspace]
members = ["crates/core", "crates/mpv", "apps/desktop", "apps/android"]
resolver = "2"

[profile.release]
# 行号表。cargo 的 release 默认 debug=0,MSVC 仍会产出一个 pdb,但里面只有函数名 ——
# Sentry 上收到的 panic 就是「某个函数里」,定位不到哪一行。line-tables-only 只补行号
# 不补变量信息:pdb 大一些,**exe 体积不变**(MSVC 的调试信息本来就全在 pdb 里,
# 而发行 zip 只装 exe),编译时间小幅增加。为了让崩溃报告可读,这个价必须付。
debug = "line-tables-only"
