[package]
name = "linplayer-android"
version = "0.1.0"
description = "LinPlayer Android TV 宿主壳(Tauri 2 mobile):把 linplayer-core 的能力注册成 TV UI 可调的命令"
edition = "2021"

# cdylib 是安卓唯一真正用到的产物(Java 层 System.loadLibrary 加载它);
# staticlib/rlib 留着是为了 `cargo build`/`cargo test` 在宿主上也能跑通这个包。
[lib]
name = "linplayer_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1" # 与桌面同源:版本的唯一权威是 tauri.conf.json,build.rs 注入 LP_VERSION

[dependencies]
# 唯一的业务依赖。**不依赖 apps/desktop** —— 那个包绑死 libmpv/Win32/X11,交叉编译第一步就死。
linplayer-core = { path = "../../crates/core" }
# libmpv 封装 + 渲染面。和桌面**同一份**(2026-07-20 从 apps/desktop 提出来的),
# 安卓走的是里面那条 dlopen 分支 —— 与 Linux 一字不差。
linplayer-mpv = { path = "../../crates/mpv" }
# mpv 的告警走标准 log 门面。没装 logger 时是空操作,不会panic;
# tauri 的 android binding 会装 android_logger,所以真机上落 logcat。
log = "0.4"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ★ default-features = false 不能省。理由与 apps/desktop/Cargo.toml 里那段一字不差:
# cargo 的特性是全图合并的,漏写就把整个 workspace 拖进 openssl —— 而安卓交叉编译
# 根本没有可用的 OpenSSL,那不是「多两个依赖」,是**直接编不过**。
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "socks",
  "rustls-tls",
  "charset",
  "http2",
] }
# spawn_blocking(imgcache 把同步读写盘挪出 async worker)+ timeout(线路探测)。
tokio = { version = "1", features = ["sync", "rt", "time"] }

# SurfaceView 的 Surface 要跨 JNI 传给 mpv,并且必须做成**全局引用**
# (局部引用出了那次 native 调用就失效,mpv 之后拿它去 ANativeWindow_fromSurface 会崩)。
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
