[package]
name = "app"
version = "0.1.0"
description = "LinPlayer 桌面壳(Tauri):mpv 合成 + 核心命令桥"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"                             # build.rs 从 tauri.conf.json 取 version(Sentry release 用)

[dependencies]
linplayer-core = { path = "../../crates/core" }
# libmpv 封装 + 平台渲染面。提成共享 crate 是因为安卓壳也要用同一份(见 crates/mpv/Cargo.toml)。
linplayer-mpv = { path = "../../crates/mpv" }
dirs = "5"                                   # 截图/shader 落盘目录(与 core 的 config_path 同源)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# 原生目录选择器。**只用它的 Rust API**(包在我们自己的 pick_directory 命令里),
# 所以不需要 npm 包,也不用往 capabilities 里加 dialog 权限
# —— 那些只在前端直接 invoke 插件命令时才需要。
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ★ default-features = false 不能省。reqwest 0.12 的默认特性含 `default-tls` = **native-tls**,
# 而 cargo 的特性是**全图合并**的 —— 这一行漏写,就把整个 workspace 拖进 openssl,
# 连带作废本文件下面 sentry 那段「混两套 TLS 会把 openssl 拖进来」的努力(core 那边一直是对的)。
# Windows 上看不出来(native-tls 走 SChannel,不加系统依赖);**Linux 上是实打实的**:
# 二进制会多链 libssl.so.3/libcrypto.so.3,绿色包平白多两个系统依赖,还多编一大堆 C。
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "socks",
  "rustls-tls",
  "charset",
  "http2",
] }
async-trait = "0.1"
# rt:imgcache 的 spawn_blocking(把同步写盘挪出 async worker)。
# 别依赖「别的依赖恰好开了这个特性」—— 那种编过是巧合,哪天依赖树一变就红。
tokio = { version = "1", features = ["sync", "rt"] }
raw-window-handle = "0.6"
# 崩溃上报 + 匿名活跃统计(见 src/telemetry.rs)。
# rustls 而非默认的 native-tls:core 全链路已经是 rustls,混两套 TLS 会把 openssl 拖进来。
# release-health 才有 auto_session_tracking(「有多少人在用」靠它)。
sentry = { version = "0.48.5", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
  "release-health",
] }

# ---------- 平台专有 ----------
# windows-sys / x11-dl / libloading 原先在这里,随 mpv.rs 一起搬进了 crates/mpv ——
# 它们**只**被那个文件用(搬之前 grep 过,桌面壳其余代码一处都没引用)。

[dev-dependencies]
# test 特性给的是内存 transport(sentry::test::with_captured_events),用来验证
# before_send 真的接在了 client 上 —— 光测那个纯函数证明不了它被调用。
sentry = { version = "0.48.5", default-features = false, features = ["test"] }
