[package]
name = "linplayer-core"
version = "0.1.0"
edition = "2021"
description = "LinPlayer 平台无关核心:数据源/网络/配置(桌面+安卓复用)"

# 注意:不依赖 tauri / windows-sys / 任何桌面专属 crate,保证能交叉编译成安卓 .so。
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls(非 native-tls):去 openssl-sys,安卓交叉编译免装 OpenSSL;桌面亦通用。
# .resolve()/danger_accept_invalid_certs(CF 钉 IP+SNI)在 rustls 下同样支持。
# gzip/brotli:只给 API 那两条客户端开(见 http.rs 的 Compress);预取那条显式关。
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls", "charset", "http2", "gzip", "brotli"] }
# rustls/webpki-roots/pki-types 本就在依赖树里(reqwest 的 rustls-tls 传递引入),这里提成直接依赖
# 是为了自定义证书校验器 —— 把「自签名放行」收敛成**按 host 白名单**,而不是全局 accept_invalid_certs。
# 版本必须与 reqwest 内部的 rustls 同版(0.23),否则 use_preconfigured_tls 的 downcast 落空 → build() 报错。
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = "1"
webpki-roots = "1"
dirs = "5"
async-trait = "0.1"
md-5 = "0.10"
sha2 = "0.10"
# 115 网盘下载直链的私有编解码要一次 1024 位模幂(见 source/pan115_crypto.rs)。
# 纯 Rust 无 C 依赖,安卓交叉编译安全;不引 rsa crate —— 115 那套加解密都只用公钥,
# 要的仅是 modpow,rsa crate 的私钥/填充/校验整套都用不上。
num-bigint = "0.4"
# 115 的 16 字节会话密钥与 RSA 填充随机字节。rand 本就在依赖树里(传递引入),提成直接依赖不增体积。
rand = "0.9"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
urlencoding = "2"
regex = "1"
flate2 = "1"
# 插件系统:QuickJS(纯 Rust 绑定,可交叉安卓)。futures=AsyncRuntime;macro=async_with!。
# 不启 parallel:QuickJS runtime 本就单线程,每插件引擎钉在专用 worker 线程,不跨线程(见 worker.rs)。
rquickjs = { version = "0.10", features = ["macro", "futures"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
# tokio 已由 reqwest 传递引入,这里直连是为了自持本地预取代理的 TcpListener/worker,不增体积。
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "macros", "fs"] }

# 安卓无预生成 FFI bindings,构建期用 libclang 现生成(cargo-ndk 会喂 sysroot)。桌面走预生成不需 libclang。
[target.'cfg(target_os = "android")'.dependencies]
rquickjs = { version = "0.10", features = ["bindgen"] }

# 构建期凭据加密(明文密钥不进二进制)。与运行时 aes/cbc 同款,roundtrip 一致。
[build-dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
