[package]
name = "linplayer-mpv"
version = "0.1.0"
edition = "2021"
description = "libmpv 封装 + 各平台的渲染面(桌面顶层叠加窗 / 安卓 Surface),桌面与安卓共用"

# 为什么单独一个 crate 而不是塞进 crates/core:
# core 的契约是「平台无关,不依赖任何桌面专属 crate」,而这里**必然**要 Win32/X11/JNI。
# 也不能让 apps/android 直接依赖 apps/desktop —— 那个包绑死 tauri/windows-sys/x11-dl,
# 交叉编译第一步就死(apps/android/Cargo.toml 里已经写了这条)。
# 所以:平台相关但两端共用的东西,单独成 crate。

[dependencies]
linplayer-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }  # Status 要直接序列化给前端

# libmpv 在非 Windows 上是运行时 dlopen(理由见 src/lib.rs 的 `mod ffi`)。
# 安卓也走这条 —— 同为 ELF + dlopen,和 Linux 一字不差,这也是安卓能白捡这份实现的原因。
[target.'cfg(not(windows))'.dependencies]
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# x11-dl 而不是 x11:前者运行时 dlopen libX11,构建机不需要 X11 开发头。
x11-dl = "2"
