[package]
name = "app"
version = "0.1.0"
description = "LinPlayer 桌面壳(Tauri):mpv 合成 + 核心命令桥"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
linplayer-core = { path = "../crates/core" }
dirs = "5"                                   # 截图/shader 落盘目录(与 core 的 config_path 同源)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "socks"] }
async-trait = "0.1"
# rt:imgcache 的 spawn_blocking(把同步写盘挪出 async worker)。
# 别依赖「别的依赖恰好开了这个特性」—— 那种编过是巧合,哪天依赖树一变就红。
tokio = { version = "1", features = ["sync", "rt"] }
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }
