[package]
name = "app"
version = "0.1.0"
description = "LinPlayer 桌面壳(Tauri):mpv 合成 + 核心命令桥"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
linplayer-core = { path = "../crates/core" }
dirs = "5"                                   # 截图/shader 落盘目录(与 core 的 config_path 同源)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# 原生目录选择器。**只用它的 Rust API**(包在我们自己的 pick_directory 命令里),
# 所以不需要 npm 包,也不用往 capabilities 里加 dialog 权限
# —— 那些只在前端直接 invoke 插件命令时才需要。
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "socks"] }
async-trait = "0.1"
# rt:imgcache 的 spawn_blocking(把同步写盘挪出 async worker)。
# 别依赖「别的依赖恰好开了这个特性」—— 那种编过是巧合,哪天依赖树一变就红。
tokio = { version = "1", features = ["sync", "rt"] }
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }
