[package]
name = "app"
version = "0.1.0"
description = "LinPlayer 桌面壳(Tauri):mpv 合成 + 核心命令桥"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"                             # build.rs 从 tauri.conf.json 取 version(Sentry release 用)

[dependencies]
linplayer-core = { path = "../crates/core" }
dirs = "5"                                   # 截图/shader 落盘目录(与 core 的 config_path 同源)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# 原生目录选择器。**只用它的 Rust API**(包在我们自己的 pick_directory 命令里),
# 所以不需要 npm 包,也不用往 capabilities 里加 dialog 权限
# —— 那些只在前端直接 invoke 插件命令时才需要。
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "socks"] }
async-trait = "0.1"
# rt:imgcache 的 spawn_blocking(把同步写盘挪出 async worker)。
# 别依赖「别的依赖恰好开了这个特性」—— 那种编过是巧合,哪天依赖树一变就红。
tokio = { version = "1", features = ["sync", "rt"] }
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }
# 崩溃上报 + 匿名活跃统计(见 src/telemetry.rs)。
# rustls 而非默认的 native-tls:core 全链路已经是 rustls,混两套 TLS 会把 openssl 拖进来。
# release-health 才有 auto_session_tracking(「有多少人在用」靠它)。
sentry = { version = "0.48.5", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
  "release-health",
] }

[dev-dependencies]
# test 特性给的是内存 transport(sentry::test::with_captured_events),用来验证
# before_send 真的接在了 client 上 —— 光测那个纯函数证明不了它被调用。
sentry = { version = "0.48.5", default-features = false, features = ["test"] }
